chore: update dolly to support vanlig, avventende, behandlingsdager og reisetilskudd
